--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.6.1",
     "axios": "^0.26.0",
     "connected-next-router": "^4.1.0",
+    "iron-session": "^6.1.2",
     "next": "12.0.10",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
